# Giraffe-robot

./: README.md  giraffe_robot.urdf  giraffe_robot_control v1.py
giraffe_robot_cpp/: CMakeLists.txt
giraffe_robot_cpp/src/: main.cpp
giraffe_robot_cpp/urdf/: giraffe_robot.urdf
